# Mall-Customer-Segmentation

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.ipynb  pyproject.toml  requirements.txt
.streamlit/: config.toml
images/: video.webm
