[project]
name = "mall-customer-segmentation"
version = "0.1.0"
description = "An unsupervised learning project for segmenting mall customers based on purchasing behavior."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "ipywidgets>=8.1.8",
    "kagglehub[pandas-datasets]>=0.4.0",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
]
